# ocserv

./: .gitignore  .gitlab-ci.yml  .lgtm.yml  .mailmap  .travis.yml  .triage-policies.yml  AUTHORS  CONTRIBUTING.md  LICENSE  Makefile  Makefile.am  NEWS  README  README.md  TODO  aclocal.m4  auth.c  autogen.sh  config.h.in  configure.ac  cookies.c  cookies.h  main.c  server.c  tlslib.h  vpn.c  vpn.h
doc/: Makefile.am  README-oidc.md  README-radius.md  README.radius  auth-state.dia  design.dia  design.md  occtl.8.md  ocpasswd.8.md  ocserv.1  ocserv.8.md  profile.xml  sample.config  sample.otp  sample.passwd  session-seq-diagram-radius.dia  session-seq-diagram.dia
doc/dbus/: org.infradead.ocserv.conf  org.infradead.ocserv.service
doc/scripts/: ocserv-down  ocserv-script  ocserv-up
doc/systemd/: ocserv.service  ocserv.socket
libopts/: Makefile.am  ag-char-map.h  alias.c  ao-strs.c  ao-strs.h  autoopts.c  autoopts.h  boolean.c  check.c  configfile.c  cook.c  enum.c  env.c  file.c  find.c  genshell.c  genshell.h  gettext.h  init.c  load.c  makeshell.c  nested.c  numeric.c  option-value-type.c  option-value-type.h  option-xat-attribute.c  option-xat-attribute.h  parse-duration.c  parse-duration.h  pgusage.c  proto.h  putshell.c  reset.c  restore.c  save.c  sort.c  stack.c  streqvcmp.c  text_mmap.c  time.c  (+5 more)
libopts/autoopts/: options.h  project.h  usage-txt.h
libopts/compat/: compat.h  pathfind.c  strchr.c  windows-config.h
libopts/m4/: libopts.m4
src/: Makefile.am  auth-unix.c  auth-unix.h  auth.c  auth.h  base64-helper.c  cfg.h  common-config.h  common-json.c  common-json.h  common.c  common.h  common.mk  config-kkdcp.c  config-ports.c  config.c  cookies-gdbm.c  cookies-hash.c  cookies.c  cookies.h  ctl.h  ctl.proto  defs.h  die.c  die.h  gettime.h  group-config.c  hash.h  hashtable.h  html.c  html.h  http-heads.gperf  http_auth.c  http_auth.h  icmp-ping.c  icmp-ping.h  ip-lease.c  ip-lease.h  ip-util.c  ip-util.h  (+112 more)
src/acct/: pam.c  pam.h  radius.c  radius.h
src/auth/: common.c  common.h  gssapi.c  gssapi.h  openidconnect.c  openidconnect.h  pam.c  pam.h  plain.c  plain.h  radius.c  radius.h
src/autogen/: ocpasswd-args.c  ocpasswd-args.h  ocserv-args.c  ocserv-args.h
src/ccan/: Makefile.am
src/common/: Makefile.am  base64-helper.c  base64-helper.h  cloexec.h  common.c  common.h  ctl.proto  hmac.c  hmac.h  snapshot.c  snapshot.h  sockdiag.c  sockdiag.h  system.c  system.h
src/http-parser/: http_parser.c
src/inih/: ini.c
src/occtl/: Makefile.am  args.def  cache.c  ctl.h  geoip.c  geoip.h  hex.c  ip-cache.c  json.h  maxmind.c  nl.c  occtl-args.def  occtl.c  occtl.h  pager.c  print.c  session-cache.c  time.c  unix.c
src/ocpasswd/: Makefile.am  args.c.in  args.def  args.h.in  ocpasswd-args.c.in  ocpasswd-args.def  ocpasswd-args.h.in  ocpasswd.c
src/pcl/: Makefile.am  pcl.c  pcl_config.h  pcl_version.c
src/protobuf/: Makefile.am
src/sup-config/: file.c  file.h  radius.c  radius.h
tests/: Makefile.am  ac-aes128-gcm-cipher  ac-aes256-gcm-cipher  aes128-cipher  aes128-gcm-cipher  aes256-cipher  aes256-gcm-cipher  apple-ios  ban-ips.c  banner  cipher-common.sh  common.sh  compression  config-auth.xml  connect-ios-script  connect-script  cstp-recv.c  disconnect-user  disconnect-user2  docker-common.sh  drain-server  drain-server-fail  firewall-neg-test  firewall-test  flowcontrol  full-test  generate_oidc_test_data.c  haproxy-auth  haproxy-connect  haproxy-proxyproto  haproxy-proxyproto-v1  html-escape.c  human_addr.c  invalid-configs  ipv4-prefix.c  ipv6-iface  ipv6-prefix.c  json  json-escape.c  kerberos  (+122 more)
tests/certs/: crl.pem  kerberos-cert.pem  server-cert-ca.pem  server-cert-ed25519.pem  server-cert-rsa-pss.pem  server-cert-secp521r1.pem  server-key-ed25519.pem  server-key-ossl.pem  server-key-p8.pem  server-key-rsa-pss.pem  server-key-secp521r1.pem  server-key.pem  user-cert-invalid.pem  user-cert-testuser.pem  user-cert-wrong.pem  user-group-cert.pem  user-key.pem  user-san-cert.pem
tests/data/: apple-ios.config  config-per-group.config  disconnect-user.config  disconnect-user2.config  haproxy-auth.cfg  haproxy-connect.cfg  haproxy-proxyproto-v1.cfg  haproxy-proxyproto-v1.config  haproxy-proxyproto.cfg  haproxy-proxyproto.config  ipv6-iface.config  kadm5.acl  kdc.conf  kerberos.config  krb5.conf  multiple-routes.config  no-route-default.config  no-route-group.config  ping-leases.config  radius-group.config  radius-otp.config  radius.config  test-ban.config  test-cert-opt-pass.config  test-ciphers.config  test-compression-lz4.config  test-compression-lzs.config  test-compression.config  test-cookie-invalidation.config  test-cookie-timeout-2.config  test-cookie-timeout.config  test-ed25519.config  test-enc-key.config  test-enc-key2.config  test-explicit-ip.config  test-group-cert.config  test-group-name.config  test-group-pass.config  test-gssapi-local-map.config  test-gssapi-opt-cert.config  (+39 more)
tests/docker-kerberos/: Dockerfile-fedora-client  Dockerfile-fedora-kerberos  Makefile.am  cert.pem  kdc.conf  krb5.conf  myscript  ocserv.conf  pam-ocserv
tests/docker-ocserv/: Dockerfile  Dockerfile-debian-proxyproto  Dockerfile-debian-radius  Dockerfile-debian-radius-config  Dockerfile-debian-tcp  Dockerfile-debian-unix  Dockerfile-fedora-fw  Dockerfile-fedora-fw-neg  Dockerfile-fedora-otp  Dockerfile-fedora-pam  Dockerfile-fedora-pam-noauth  Dockerfile-fedora-proxyproto  Dockerfile-fedora-proxyproto-unix  Dockerfile-fedora-proxyproto-v1  Dockerfile-fedora-radius  Dockerfile-fedora-radius-config  Dockerfile-fedora-radius-group  Dockerfile-fedora-reload  Dockerfile-fedora-tcp  Dockerfile-fedora-unix  Dockerfile-unix  Makefile.am  combo.pem  dev-tun.tgz  freeradius-users  fw-script  haproxy-proxyproto-unix.cfg  haproxy-proxyproto-v1.cfg  haproxy-proxyproto.cfg  haproxy.cfg  myscript  ocserv-fw-neg.conf  ocserv-fw.conf  ocserv-otp.conf  ocserv-pam-noauth.conf  ocserv-pam.conf  ocserv-proxyproto-unix.conf  ocserv-proxyproto-v1.conf  ocserv-proxyproto.conf  ocserv-radius-config.conf  (+15 more)
tests/scripts/: proxy-connectscript  proxy-connectscript-v1  vpnc-script
(+91 files in other folders)
